added json information for environment and a lot of debugging edition :)

--- a/Data_Generator/data_generator.ipynb
+++ b/Data_Generator/data_generator.ipynb
@@ -9,7 +9,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from __future__ import annotations\n",
+    "\n",
+    "import os\n",
+    "import json\n",
+    "import math\n",
+    "import time\n",
+    "import random\n",
+    "import platform\n",
+    "import getpass\n",
+    "import hashlib\n",
+    "from dataclasses import dataclass, asdict, replace\n",
+    "from typing import List, Dict, Optional\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -35,10 +59,12 @@
       "}\n",
       "[sanity] Checking episode directory: ./datasets\\ep_000\n",
       "  [OK] Loaded metadata with 3 scenarios\n",
-      "  [scenario=light] n_tasks=66, n_arrivals=66, n_agents=18\n",
-      "    [INFO] Poisson check: some agents have realized rate far from expected (too_low=2, too_high=3) in 'light'\n",
-      "  [scenario=moderate] n_tasks=263, n_arrivals=263, n_agents=18\n",
-      "  [scenario=heavy] n_tasks=808, n_arrivals=808, n_agents=18\n"
+      "  [scenario=light] n_tasks=63, n_arrivals=63, n_mecs=18\n",
+      "    [INFO] Poisson check: some MECs have realized rate far from expected (too_low=2, too_high=3) in 'light'\n",
+      "  [scenario=moderate] n_tasks=232, n_arrivals=232, n_mecs=18\n",
+      "    [INFO] Poisson check: some MECs have realized rate far from expected (too_low=0, too_high=2) in 'moderate'\n",
+      "  [scenario=heavy] n_tasks=838, n_arrivals=838, n_mecs=18\n",
+      "    [INFO] Poisson check: some MECs have realized rate far from expected (too_low=0, too_high=1) in 'heavy'\n"
      ]
     }
    ],
@@ -67,7 +93,7 @@
     "    ep_000/\n",
     "      light/\n",
     "        episodes.csv\n",
-    "        agents.csv\n",
+    "        agents.csv        # represents MEC nodes; contains mec_id + lam_sec\n",
     "        arrivals.csv\n",
     "        tasks.csv\n",
     "        summary_stats.csv\n",
@@ -78,23 +104,6 @@
     "        ...\n",
     "      dataset_metadata.json   # meta info for ALL scenarios in this episode\n",
     "\"\"\"\n",
-    "\n",
-    "from __future__ import annotations\n",
-    "\n",
-    "import os\n",
-    "import json\n",
-    "import math\n",
-    "import time\n",
-    "import random\n",
-    "import platform\n",
-    "import getpass\n",
-    "from dataclasses import dataclass, asdict, replace\n",
-    "from typing import List, Dict, Optional\n",
-    "\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "\n",
     "# ============================================================\n",
     "# Load configuration from JSON\n",
@@ -137,11 +146,6 @@
     "    # arrival rate per SECOND (will be multiplied by Delta per slot)\n",
     "    lam_sec_min: float\n",
     "    lam_sec_max: float\n",
-    "    # optional local capacities (kept as meta for later)\n",
-    "    f_local_min: float\n",
-    "    f_local_max: float\n",
-    "    m_local_min: float\n",
-    "    m_local_max: float\n",
     "\n",
     "@dataclass\n",
     "class TaskFeatureDist:\n",
@@ -170,7 +174,7 @@
     "@dataclass\n",
     "class GlobalConfig:\n",
     "    name: str\n",
-    "    N_agents: int\n",
+    "    N_agents: int              # number of MEC nodes (kept name for compatibility)\n",
     "    Episode: EpisodeConf\n",
     "    AgentRanges: AgentRanges\n",
     "    TaskDist: TaskFeatureDist\n",
@@ -242,22 +246,26 @@
     "\n",
     "\n",
     "# ============================================================\n",
-    "# entities\n",
+    "# entities (MEC nodes)\n",
     "# ============================================================\n",
     "@dataclass\n",
     "class Agent:\n",
-    "    agent_id: int\n",
-    "    f_local: float\n",
-    "    m_local: float\n",
-    "    lam_sec: float   # Poisson rate per second (not per-slot)\n",
+    "    \"\"\"\n",
+    "    Represents a MEC node from the dataset generator's point of view.\n",
+    "    \"\"\"\n",
+    "    agent_id: int      # will be stored as mec_id in CSVs\n",
+    "    lam_sec: float     # Poisson rate per second (not per-slot)\n",
     "\n",
     "def build_agents(cfg: GlobalConfig, rng: np.random.Generator) -> List[Agent]:\n",
+    "    \"\"\"\n",
+    "    Build a list of MEC nodes with Poisson arrival rates lam_sec.\n",
+    "    No local resource capacities are modeled here; they are assumed to\n",
+    "    live in the environment code.\n",
+    "    \"\"\"\n",
     "    agents: List[Agent] = []\n",
     "    for i in range(cfg.N_agents):\n",
     "        lam_sec = rng.uniform(cfg.AgentRanges.lam_sec_min, cfg.AgentRanges.lam_sec_max)\n",
-    "        f_loc   = rng.uniform(cfg.AgentRanges.f_local_min, cfg.AgentRanges.f_local_max)\n",
-    "        m_loc   = rng.uniform(cfg.AgentRanges.m_local_min, cfg.AgentRanges.m_local_max)\n",
-    "        agents.append(Agent(agent_id=i, f_local=f_loc, m_local=m_loc, lam_sec=lam_sec))\n",
+    "        agents.append(Agent(agent_id=i, lam_sec=lam_sec))\n",
     "    return agents\n",
     "\n",
     "\n",
@@ -337,13 +345,11 @@
     "    T_slots    = cfg.Episode.T_slots\n",
     "    T_decision = cfg.Episode.T_decision\n",
     "\n",
-    "    # agents (include scenario for easier joins)\n",
+    "    # MEC nodes (stored in agents.csv; include scenario for easier joins)\n",
     "    for a in agents:\n",
     "        rows_agents.append({\n",
     "            \"scenario\": cfg.name,\n",
-    "            \"agent_id\": a.agent_id,\n",
-    "            \"f_local\": a.f_local,\n",
-    "            \"m_local\": a.m_local,\n",
+    "            \"mec_id\": a.agent_id,\n",
     "            \"lam_sec\": a.lam_sec\n",
     "        })\n",
     "\n",
@@ -378,7 +384,7 @@
     "                    \"episode_id\": episode_id,\n",
     "                    \"t_slot\": t,\n",
     "                    \"t_time\": t_time,\n",
-    "                    \"agent_id\": a.agent_id,\n",
+    "                    \"mec_id\": a.agent_id,\n",
     "                    \"task_id\": task_id_counter\n",
     "                })\n",
     "\n",
@@ -386,7 +392,7 @@
     "                    \"scenario\": cfg.name,\n",
     "                    \"episode_id\": episode_id,\n",
     "                    \"task_id\": task_id_counter,\n",
-    "                    \"agent_id\": a.agent_id,\n",
+    "                    \"mec_id\": a.agent_id,\n",
     "                    \"t_arrival_slot\": t,\n",
     "                    \"t_arrival_time\": t_time,\n",
     "                    \"b_mb\": feat[\"b_mb\"],\n",
@@ -412,7 +418,7 @@
     "        \"T_decision\": T_decision,\n",
     "        \"T_drain\": cfg.Episode.T_drain,\n",
     "        \"hours\": T_slots * Delta / 3600.0,\n",
-    "        \"N_agents\": len(agents),\n",
+    "        \"N_agents\": len(agents),       # number of MEC nodes; name kept for compatibility\n",
     "        \"seed\": cfg.Episode.seed + episode_id\n",
     "    })\n",
     "\n",
@@ -426,7 +432,7 @@
     "        tasks_df[\"modality\"] = tasks_df[\"modality\"].astype(\"category\")\n",
     "        tasks_df[\"action_space_hint\"] = tasks_df[\"action_space_hint\"].astype(\"category\")\n",
     "        # ints\n",
-    "        for col in [\"episode_id\", \"task_id\", \"agent_id\", \"t_arrival_slot\", \"has_deadline\", \"non_atomic\"]:\n",
+    "        for col in [\"episode_id\", \"task_id\", \"mec_id\", \"t_arrival_slot\", \"has_deadline\", \"non_atomic\"]:\n",
     "            if col in tasks_df:\n",
     "                tasks_df[col] = tasks_df[col].astype(\"int32\")\n",
     "        # floats\n",
@@ -436,7 +442,7 @@
     "                tasks_df[col] = tasks_df[col].astype(\"float32\")\n",
     "\n",
     "    if len(arrivals_df):\n",
-    "        for col in [\"episode_id\", \"t_slot\", \"agent_id\", \"task_id\"]:\n",
+    "        for col in [\"episode_id\", \"t_slot\", \"mec_id\", \"task_id\"]:\n",
     "            if col in arrivals_df:\n",
     "                arrivals_df[col] = arrivals_df[col].astype(\"int32\")\n",
     "        for col in [\"t_time\"]:\n",
@@ -444,9 +450,9 @@
     "                arrivals_df[col] = arrivals_df[col].astype(\"float32\")\n",
     "\n",
     "    if len(agents_df):\n",
-    "        for col in [\"agent_id\"]:\n",
+    "        for col in [\"mec_id\"]:\n",
     "            agents_df[col] = agents_df[col].astype(\"int32\")\n",
-    "        for col in [\"f_local\", \"m_local\", \"lam_sec\"]:\n",
+    "        for col in [\"lam_sec\"]:\n",
     "            agents_df[col] = agents_df[col].astype(\"float64\")\n",
     "\n",
     "    if len(episodes_df):\n",
@@ -525,20 +531,18 @@
     "            \"name\": cfg.name,\n",
     "            \"fingerprint\": _config_fingerprint(cfg),\n",
     "            \"Episode\": asdict(cfg.Episode),\n",
-    "            \"N_agents\": cfg.N_agents,\n",
+    "            \"N_agents\": cfg.N_agents,              # number of MEC nodes\n",
     "            \"AgentRanges\": asdict(cfg.AgentRanges),\n",
     "            \"TaskDist\": asdict(cfg.TaskDist),\n",
     "            \"units\": {\n",
     "                \"Delta\": \"seconds\",\n",
-    "                \"lam_sec\": \"tasks per second (per agent)\",\n",
+    "                \"lam_sec\": \"tasks per second (per MEC)\",\n",
     "                \"per_slot_rate\": \"lam_sec * Delta\",\n",
     "                \"b_mb\": \"MB\",\n",
     "                \"rho_cyc_per_mb\": \"CPU cycles per MB\",\n",
     "                \"c_cycles\": \"CPU cycles\",\n",
     "                \"mem_mb\": \"MB\",\n",
-    "                \"deadline_s\": \"seconds (relative); deadline_time = t_arrival_time + deadline_s\",\n",
-    "                \"f_local\": \"Hz\",\n",
-    "                \"m_local\": \"MB\"\n",
+    "                \"deadline_s\": \"seconds (relative); deadline_time = t_arrival_time + deadline_s\"\n",
     "            }\n",
     "        })\n",
     "\n",
@@ -610,16 +614,16 @@
     "        hist_plot(tasks.loc[tasks[\"non_atomic\"] == 1, \"split_ratio\"],\n",
     "                  title=\"Split ratio (only non-atomic)\", fname=\"hist_split_ratio.png\", logx=False)\n",
     "\n",
-    "    # arrivals per agent\n",
+    "    # arrivals per MEC\n",
     "    if len(arrivals):\n",
-    "        per_agent = arrivals.groupby(\"agent_id\").size()\n",
+    "        per_mec = arrivals.groupby(\"mec_id\").size()\n",
     "        plt.figure()\n",
-    "        plt.bar(per_agent.index.astype(str), per_agent.values)\n",
-    "        plt.title(\"Arrivals per agent\")\n",
-    "        plt.xlabel(\"agent_id\")\n",
+    "        plt.bar(per_mec.index.astype(str), per_mec.values)\n",
+    "        plt.title(\"Arrivals per MEC\")\n",
+    "        plt.xlabel(\"mec_id\")\n",
     "        plt.ylabel(\"count\")\n",
     "        plt.tight_layout()\n",
-    "        plt.savefig(os.path.join(out_dir, \"bar_arrivals_per_agent.png\"), dpi=160)\n",
+    "        plt.savefig(os.path.join(out_dir, \"bar_arrivals_per_mec.png\"), dpi=160)\n",
     "        plt.close()\n",
     "\n",
     "\n",
@@ -641,19 +645,14 @@
     "    seed=GLOBAL_SEED\n",
     ")\n",
     "\n",
-    "# Agent base ranges (lam_sec_min/max overridden per-scenario)\n",
-    "AGENT_CFG = CFG[\"agents\"]\n",
     "SC_LIGHT  = CFG[\"scenarios\"][\"light\"]\n",
     "SC_MOD    = CFG[\"scenarios\"][\"moderate\"]\n",
     "SC_HEAVY  = CFG[\"scenarios\"][\"heavy\"]\n",
     "\n",
+    "# Base AgentRanges; scenario-specific overrides applied with replace(...)\n",
     "BASE_AGENT_RANGES = AgentRanges(\n",
     "    lam_sec_min=SC_LIGHT[\"lam_sec_min\"],   # base placeholder; overridden for each scenario\n",
     "    lam_sec_max=SC_HEAVY[\"lam_sec_max\"],   # base placeholder\n",
-    "    f_local_min=AGENT_CFG[\"f_local_min\"],\n",
-    "    f_local_max=AGENT_CFG[\"f_local_max\"],\n",
-    "    m_local_min=AGENT_CFG[\"m_local_min\"],\n",
-    "    m_local_max=AGENT_CFG[\"m_local_max\"]\n",
     ")\n",
     "\n",
     "# Base TaskFeatureDist; scenario-specific overrides applied with replace(...)\n",
@@ -790,7 +789,7 @@
     "    \"\"\"\n",
     "    results: Dict[str, Dict[str, str]] = {}\n",
     "\n",
-    "    # For stability, build agents per scenario once (same pool across episodes for that scenario)\n",
+    "    # For stability, build MEC nodes (\"agents\") per scenario once (same pool across episodes for that scenario)\n",
     "    agents_per_scenario: Dict[str, List[Agent]] = {}\n",
     "    for cfg in SCENARIOS:\n",
     "        rng_agents = np.random.default_rng(cfg.Episode.seed + 10_000)\n",
@@ -832,7 +831,7 @@
     "    Lightweight sanity checks for one ep_xxx:\n",
     "      - basic file presence\n",
     "      - tasks vs arrivals count & task_id consistency\n",
-    "      - agent_id consistency\n",
+    "      - mec_id consistency\n",
     "      - basic value ranges (positivity, deadlines, split_ratio)\n",
     "      - rough consistency between lambda and realized tasks/hour (on decision slots)\n",
     "    \"\"\"\n",
@@ -863,7 +862,7 @@
     "            print(f\"  [WARN] Failed to load CSVs for scenario '{scen}': {e}\")\n",
     "            continue\n",
     "\n",
-    "        print(f\"  [scenario={scen}] n_tasks={len(tasks_df)}, n_arrivals={len(arrivals_df)}, n_agents={len(agents_df)}\")\n",
+    "        print(f\"  [scenario={scen}] n_tasks={len(tasks_df)}, n_arrivals={len(arrivals_df)}, n_mecs={len(agents_df)}\")\n",
     "\n",
     "        # 1) non-empty checks\n",
     "        if len(tasks_df) == 0 or len(arrivals_df) == 0:\n",
@@ -877,14 +876,14 @@
     "        if tasks_df[\"task_id\"].nunique() != len(tasks_df):\n",
     "            print(f\"    [WARN] Duplicate task_id in tasks.csv for scenario '{scen}'\")\n",
     "\n",
-    "        # 3) agent_id consistency\n",
-    "        agents_set = set(agents_df[\"agent_id\"].tolist())\n",
-    "        arr_agents = set(arrivals_df[\"agent_id\"].tolist())\n",
-    "        task_agents = set(tasks_df[\"agent_id\"].tolist())\n",
-    "        if not arr_agents.issubset(agents_set):\n",
-    "            print(f\"    [WARN] Some arrival agent_ids not in agents table for '{scen}'\")\n",
-    "        if not task_agents.issubset(agents_set):\n",
-    "            print(f\"    [WARN] Some task agent_ids not in agents table for '{scen}'\")\n",
+    "        # 3) mec_id consistency\n",
+    "        mecs_set = set(agents_df[\"mec_id\"].tolist())\n",
+    "        arr_mecs = set(arrivals_df[\"mec_id\"].tolist())\n",
+    "        task_mecs = set(tasks_df[\"mec_id\"].tolist())\n",
+    "        if not arr_mecs.issubset(mecs_set):\n",
+    "            print(f\"    [WARN] Some arrival mec_ids not in agents table for '{scen}'\")\n",
+    "        if not task_mecs.issubset(mecs_set):\n",
+    "            print(f\"    [WARN] Some task mec_ids not in agents table for '{scen}'\")\n",
     "\n",
     "        # 4) basic value ranges\n",
     "        if (tasks_df[\"b_mb\"] <= 0).any():\n",
@@ -915,11 +914,11 @@
     "            hours = float(episodes_df.iloc[0][\"T_decision\"] * episodes_df.iloc[0][\"Delta\"]) / 3600.0\n",
     "            if hours > 0:\n",
     "                # arrivals only exist in decision slots by construction\n",
-    "                tasks_per_agent = arrivals_df.groupby(\"agent_id\").size() / hours\n",
+    "                tasks_per_mec = arrivals_df.groupby(\"mec_id\").size() / hours\n",
     "                merged = pd.merge(\n",
-    "                    agents_df[[\"agent_id\", \"lam_sec\"]],\n",
-    "                    tasks_per_agent.rename(\"tasks_per_hour\").reset_index(),\n",
-    "                    on=\"agent_id\",\n",
+    "                    agents_df[[\"mec_id\", \"lam_sec\"]],\n",
+    "                    tasks_per_mec.rename(\"tasks_per_hour\").reset_index(),\n",
+    "                    on=\"mec_id\",\n",
     "                    how=\"left\"\n",
     "                )\n",
     "                merged[\"lam_per_hour\"] = merged[\"lam_sec\"] * 3600.0\n",
@@ -927,7 +926,7 @@
     "                too_low = (merged[\"ratio\"] < 0.4).sum()\n",
     "                too_high = (merged[\"ratio\"] > 1.6).sum()\n",
     "                if too_low + too_high > 0:\n",
-    "                    print(f\"    [INFO] Poisson check: some agents have realized rate far from expected \"\n",
+    "                    print(f\"    [INFO] Poisson check: some MECs have realized rate far from expected \"\n",
     "                          f\"(too_low={too_low}, too_high={too_high}) in '{scen}'\")\n",
     "\n",
     "def sanity_check_root(out_root: str, scenario_names: List[str]) -> None:\n",
