--- a/Environment_Generator/environment_generator.ipynb
+++ b/Environment_Generator/environment_generator.ipynb
@@ -9,128 +9,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
+    "import json\n",
     "from collections import deque"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class MEC:\n",
-    "    def __init__(self, id, private_cpu_capacity, public_cpu_capacity, num_servers):\n",
-    "        self.id = id\n",
-    "        self.private_cpu_capacity = private_cpu_capacity  # Private CPU processing capacity\n",
-    "        self.public_cpu_capacity = public_cpu_capacity  # Public CPU processing capacity\n",
-    "        self.private_queue = deque()  # Private queue for local tasks (FIFO)\n",
-    "        self.public_queues = {i: deque() for i in range(num_servers) if i != self.id}  # Public queues for tasks from other MECs (FIFO)\n",
-    "\n",
-    "    def get_info(self):\n",
-    "        return {\n",
-    "            'id': self.id,\n",
-    "            'private_cpu_capacity': self.private_cpu_capacity,\n",
-    "            'public_cpu_capacity': self.public_cpu_capacity\n",
-    "        }\n",
-    "\n",
-    "    def process_private_task(self):\n",
-    "        \"\"\"Process task from private queue (FIFO)\"\"\"\n",
-    "        if self.private_queue:\n",
-    "            task = self.private_queue.popleft()  # Get the first task in the private queue\n",
-    "            print(f\"Processing task from private queue of MEC {self.id}\")\n",
-    "            # Task is processed here with the private CPU capacity\n",
-    "            return True\n",
-    "        return False\n",
-    "\n",
-    "    def process_public_tasks(self):\n",
-    "        \"\"\"Process tasks from public queues (FIFO for each queue)\"\"\"\n",
-    "        for queue_id, queue in self.public_queues.items():\n",
-    "            if queue:\n",
-    "                task = queue.popleft()  # Get the first task in the public queue\n",
-    "                print(f\"Processing task from public queue {queue_id} of MEC {self.id}\")\n",
-    "                # Task is processed here with the public CPU capacity for that queue\n",
-    "                return True\n",
-    "        return False\n",
-    "\n",
-    "class Cloud:\n",
-    "    def __init__(self, id, computational_capacity, num_servers):\n",
-    "        self.id = id\n",
-    "        self.computational_capacity = computational_capacity\n",
-    "        self.public_queues = {i: deque() for i in range(num_servers)}  # Public queues for tasks from all MECs (FIFO)\n",
-    "\n",
-    "    def get_info(self):\n",
-    "        return {\n",
-    "            'id': self.id,\n",
-    "            'computational_capacity': self.computational_capacity\n",
-    "        }\n",
-    "\n",
-    "    def process_public_tasks(self):\n",
-    "        \"\"\"Process tasks from public queues (FIFO for each queue)\"\"\"\n",
-    "        for queue_id, queue in self.public_queues.items():\n",
-    "            if queue:\n",
-    "                task = queue.popleft()  # Get the first task in the public queue\n",
-    "                print(f\"Processing task from public queue {queue_id} in Cloud {self.id}\")\n",
-    "                # Task is processed here with the Cloud CPU capacity\n",
-    "                return True\n",
-    "        return False\n",
-    "\n",
-    "class Environment:\n",
-    "    def __init__(self, num_servers, num_clouds, cloud_cpu_capacity, server_cpu_capacities, folder_path):\n",
-    "        self.num_servers = num_servers\n",
-    "        self.num_clouds = num_clouds  # Number of Clouds\n",
-    "        self.folder_path = folder_path  # Folder where CSV files will be saved\n",
-    "        \n",
-    "        # Create Cloud(s)\n",
-    "        self.clouds = [Cloud(i, cloud_cpu_capacity, num_servers) for i in range(num_clouds)]\n",
-    "        \n",
-    "        # Create MEC servers with the same private and public CPU capacity for all\n",
-    "        self.servers = [MEC(i, server_cpu_capacities, server_cpu_capacities, num_servers) \n",
-    "                        for i in range(num_servers)]\n",
-    "\n",
-    "        # Create folder if it doesn't exist\n",
-    "        if not os.path.exists(self.folder_path):\n",
-    "            os.makedirs(self.folder_path)\n",
-    "\n",
-    "    def save_environment_csv(self, filename='environment.csv'):\n",
-    "        # Collecting server and cloud info for CSV\n",
-    "        server_data = []\n",
-    "        for server in self.servers:\n",
-    "            server_info = server.get_info()\n",
-    "            server_data.append({\n",
-    "                'Server ID': server_info['id'],\n",
-    "                'Private CPU Capacity': server_info['private_cpu_capacity'],\n",
-    "                'Public CPU Capacity': server_info['public_cpu_capacity']\n",
-    "            })\n",
-    "        \n",
-    "        # Saving server data into CSV in the specified folder\n",
-    "        df_servers = pd.DataFrame(server_data)\n",
-    "        server_file_path = os.path.join(self.folder_path, filename)\n",
-    "        df_servers.to_csv(server_file_path, index=False)\n",
-    "        \n",
-    "        # Saving cloud data into CSV in the specified folder\n",
-    "        cloud_info = [cloud.get_info() for cloud in self.clouds]\n",
-    "        df_cloud = pd.DataFrame(cloud_info)\n",
-    "        cloud_file_path = os.path.join(self.folder_path, 'cloud_info.csv')\n",
-    "        df_cloud.to_csv(cloud_file_path, index=False)\n",
-    "\n",
-    "    def load_environment(self, filename='environment.csv'):\n",
-    "        # Loading server data from CSV\n",
-    "        server_file_path = os.path.join(self.folder_path, filename)\n",
-    "        df_servers = pd.read_csv(server_file_path)\n",
-    "        server_data = df_servers.to_dict(orient='records')\n",
-    "        \n",
-    "        # Re-initializing servers with loaded data\n",
-    "        self.servers = [MEC(server['Server ID'], server['Private CPU Capacity'], \n",
-    "                            server['Public CPU Capacity'], self.num_servers) \n",
-    "                        for i, server in enumerate(server_data)]\n",
-    "\n",
-    "    def get_environment_info(self):\n",
-    "        # Returning environment info including cloud and server data\n",
-    "        environment_info = {\n",
-    "            'clouds': [cloud.get_info() for cloud in self.clouds],\n",
-    "            'servers': [server.get_info() for server in self.servers]\n",
-    "        }\n",
-    "        return environment_info"
    ]
   },
   {
@@ -147,29 +27,190 @@
     }
    ],
    "source": [
-    "# Example Usage\n",
-    "num_mec = 20  # Number of MECs\n",
-    "num_cloud = 1  # Number of Clouds\n",
-    "mec_private_cpu_capacities = 0.5 * 10  # Private CPU capacities for each MEC\n",
-    "mec_public_cpu_capacities = 0.5 * 10  # Public CPU capacities for each MEC\n",
-    "cloud_cpu_capacity = 3.0 * 10  # Cloud CPU capacity\n",
-    "folder_path = './simulation_output'  # Folder where the CSVs will be saved\n",
+    "class MEC:\n",
+    "    def __init__(self, id, private_cpu_capacity, public_cpu_capacity, num_servers):\n",
+    "        self.id = id\n",
+    "        self.private_cpu_capacity = private_cpu_capacity  # Private CPU processing capacity\n",
+    "        self.public_cpu_capacity = public_cpu_capacity    # Public CPU processing capacity\n",
+    "        self.private_queue = deque()  # Private queue for local tasks (FIFO)\n",
+    "        # Public queues for tasks coming from other MECs (FIFO)\n",
+    "        self.public_queues = {i: deque() for i in range(num_servers) if i != self.id}\n",
     "\n",
-    "# Initialize environment\n",
-    "env = Environment(num_servers=num_mec, num_clouds=num_cloud, cloud_cpu_capacity=cloud_cpu_capacity,\n",
-    "                  server_cpu_capacities=mec_private_cpu_capacities, folder_path=folder_path)\n",
+    "    def get_info(self):\n",
+    "        return {\n",
+    "            'id': self.id,\n",
+    "            'private_cpu_capacity': self.private_cpu_capacity,\n",
+    "            'public_cpu_capacity': self.public_cpu_capacity\n",
+    "        }\n",
     "\n",
-    "# Save environment to CSV in the specified folder\n",
-    "env.save_environment_csv()\n",
+    "    def process_private_task(self):\n",
+    "        \"\"\"Process one task from the private queue (FIFO).\"\"\"\n",
+    "        if self.private_queue:\n",
+    "            task = self.private_queue.popleft()  # Get the first task in the private queue\n",
+    "            print(f\"Processing task from private queue of MEC {self.id}\")\n",
+    "            # Task would be processed here using the private CPU capacity\n",
+    "            return True\n",
+    "        return False\n",
     "\n",
-    "# Load environment from CSV (for testing)\n",
-    "env2 = Environment(num_servers=num_mec, num_clouds=num_cloud, cloud_cpu_capacity=cloud_cpu_capacity,\n",
-    "                   server_cpu_capacities=mec_private_cpu_capacities, folder_path=folder_path)\n",
-    "env2.load_environment()\n",
+    "    def process_public_tasks(self):\n",
+    "        \"\"\"Process one task from the public queues (FIFO in each queue).\"\"\"\n",
+    "        for queue_id, queue in self.public_queues.items():\n",
+    "            if queue:\n",
+    "                task = queue.popleft()  # Get the first task in the public queue\n",
+    "                print(f\"Processing task from public queue {queue_id} of MEC {self.id}\")\n",
+    "                # Task would be processed here using the public CPU capacity\n",
+    "                return True\n",
+    "        return False\n",
     "\n",
-    "# Get environment info\n",
-    "env_info = env2.get_environment_info()\n",
-    "print(env_info)"
+    "class Cloud:\n",
+    "    def __init__(self, id, computational_capacity, num_servers):\n",
+    "        self.id = id\n",
+    "        self.computational_capacity = computational_capacity\n",
+    "        # Public queues for tasks from all MECs (FIFO)\n",
+    "        self.public_queues = {i: deque() for i in range(num_servers)}\n",
+    "\n",
+    "    def get_info(self):\n",
+    "        return {\n",
+    "            'id': self.id,\n",
+    "            'computational_capacity': self.computational_capacity\n",
+    "        }\n",
+    "\n",
+    "    def process_public_tasks(self):\n",
+    "        \"\"\"Process one task from the public queues (FIFO in each queue).\"\"\"\n",
+    "        for queue_id, queue in self.public_queues.items():\n",
+    "            if queue:\n",
+    "                task = queue.popleft()  # Get the first task in the public queue\n",
+    "                print(f\"Processing task from public queue {queue_id} in Cloud {self.id}\")\n",
+    "                # Task would be processed here using the cloud computational capacity\n",
+    "                return True\n",
+    "        return False\n",
+    "    \n",
+    "class Environment:\n",
+    "    def __init__(self, config):\n",
+    "        \"\"\"\n",
+    "        Initialize the environment from a configuration dictionary.\n",
+    "\n",
+    "        Expected config structure:\n",
+    "        {\n",
+    "            \"num_mecs\": <int>,\n",
+    "            \"num_clouds\": <int>,\n",
+    "            \"folder_path\": \"<path string>\",\n",
+    "            \"mecs\": [\n",
+    "                {\n",
+    "                    \"id\": <int>,\n",
+    "                    \"private_cpu_capacity\": <float>,\n",
+    "                    \"public_cpu_capacity\": <float>\n",
+    "                },\n",
+    "                ...\n",
+    "            ],\n",
+    "            \"clouds\": [\n",
+    "                {\n",
+    "                    \"id\": <int>,\n",
+    "                    \"computational_capacity\": <float>\n",
+    "                },\n",
+    "                ...\n",
+    "            ]\n",
+    "        }\n",
+    "        \"\"\"\n",
+    "        self.num_servers = config[\"num_mecs\"]\n",
+    "        self.num_clouds = config[\"num_clouds\"]\n",
+    "        self.folder_path = config[\"folder_path\"]\n",
+    "\n",
+    "        # Create cloud instances based on config\n",
+    "        cloud_configs = config.get(\"clouds\", [])\n",
+    "        self.clouds = [\n",
+    "            Cloud(cloud_conf[\"id\"], cloud_conf[\"computational_capacity\"], self.num_servers)\n",
+    "            for cloud_conf in cloud_configs\n",
+    "        ]\n",
+    "\n",
+    "        # Create MEC server instances based on config\n",
+    "        mec_configs = config.get(\"mecs\", [])\n",
+    "        # Optionally we could validate that len(mec_configs) == self.num_servers\n",
+    "        self.servers = [\n",
+    "            MEC(mec_conf[\"id\"],\n",
+    "                mec_conf[\"private_cpu_capacity\"],\n",
+    "                mec_conf[\"public_cpu_capacity\"],\n",
+    "                self.num_servers)\n",
+    "            for mec_conf in mec_configs\n",
+    "        ]\n",
+    "\n",
+    "        # Create output folder if it does not exist\n",
+    "        if not os.path.exists(self.folder_path):\n",
+    "            os.makedirs(self.folder_path)\n",
+    "\n",
+    "    def save_environment_csv(self, filename='environment.csv'):\n",
+    "        \"\"\"Save MEC and Cloud information into CSV files.\"\"\"\n",
+    "        # Collect server info\n",
+    "        server_data = []\n",
+    "        for server in self.servers:\n",
+    "            server_info = server.get_info()\n",
+    "            server_data.append({\n",
+    "                'Server ID': server_info['id'],\n",
+    "                'Private CPU Capacity': server_info['private_cpu_capacity'],\n",
+    "                'Public CPU Capacity': server_info['public_cpu_capacity']\n",
+    "            })\n",
+    "\n",
+    "        # Save server data to CSV\n",
+    "        df_servers = pd.DataFrame(server_data)\n",
+    "        server_file_path = os.path.join(self.folder_path, filename)\n",
+    "        df_servers.to_csv(server_file_path, index=False)\n",
+    "\n",
+    "        # Save cloud data to CSV\n",
+    "        cloud_info = [cloud.get_info() for cloud in self.clouds]\n",
+    "        df_cloud = pd.DataFrame(cloud_info)\n",
+    "        cloud_file_path = os.path.join(self.folder_path, 'cloud_info.csv')\n",
+    "        df_cloud.to_csv(cloud_file_path, index=False)\n",
+    "\n",
+    "    def load_environment(self, filename='environment.csv'):\n",
+    "        \"\"\"\n",
+    "        Load server information from CSV and recreate MEC server objects.\n",
+    "        Cloud configuration is not reloaded here (only MECs).\n",
+    "        \"\"\"\n",
+    "        server_file_path = os.path.join(self.folder_path, filename)\n",
+    "        df_servers = pd.read_csv(server_file_path)\n",
+    "        server_data = df_servers.to_dict(orient='records')\n",
+    "\n",
+    "        # Re-initialize MEC servers using the loaded data\n",
+    "        self.servers = [\n",
+    "            MEC(server['Server ID'],\n",
+    "                server['Private CPU Capacity'],\n",
+    "                server['Public CPU Capacity'],\n",
+    "                self.num_servers)\n",
+    "            for server in server_data\n",
+    "        ]\n",
+    "\n",
+    "    def get_environment_info(self):\n",
+    "        \"\"\"Return a dictionary containing information about clouds and servers.\"\"\"\n",
+    "        environment_info = {\n",
+    "            'clouds': [cloud.get_info() for cloud in self.clouds],\n",
+    "            'servers': [server.get_info() for server in self.servers]\n",
+    "        }\n",
+    "        return environment_info\n",
+    "\n",
+    "\n",
+    "# ---------------- Example Usage ----------------\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Path to the JSON configuration file\n",
+    "    config_path = \"environment_config.json\"\n",
+    "\n",
+    "    # Load configuration from JSON file\n",
+    "    with open(config_path, \"r\") as f:\n",
+    "        config = json.load(f)\n",
+    "\n",
+    "    # Initialize environment from JSON config\n",
+    "    env = Environment(config)\n",
+    "\n",
+    "    # Save environment information to CSV files\n",
+    "    env.save_environment_csv()\n",
+    "\n",
+    "    # Create a new Environment instance using the same config\n",
+    "    env2 = Environment(config)\n",
+    "    # Load server information from CSV into the new environment instance\n",
+    "    env2.load_environment()\n",
+    "\n",
+    "    # Retrieve and print environment information\n",
+    "    env_info = env2.get_environment_info()\n",
+    "    print(env_info)"
    ]
   }
  ],
